# traffic-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN_PHASE5.md
examples/: corridor_counts_example.csv  counts_example.csv
examples/sites/: README.md
examples/sites/downtown_corner/: counts.csv  site.json
examples/sites/suburban_arterial/: counts.csv  site.json
src/traffic_rl/: __init__.py  config.py  data.py  optimize.py  scenarios.py
src/traffic_rl/controllers/: __init__.py  actuated.py  base.py  fixed_time.py  max_pressure.py  network.py  webster.py
src/traffic_rl/eval/: charts.py  harness.py  metrics.py  network_harness.py  parallel.py
src/traffic_rl/rl/: __init__.py  dqn.py  env.py  features.py  network_policy.py  network_weights.npz  online.py  pattern_policy.py  pattern_weights.npz  patterns.py  policy.py  train.py  train_network.py  weights.npz
src/traffic_rl/sim/: __init__.py  arrivals.py  core.py  network.py  queues.py  signal.py
src/traffic_rl/viewer/: __init__.py  anim.py  app.py  meshes.py
tests/: conftest.py  test_arrivals.py  test_controllers.py  test_corridor_optimize.py  test_data_optimize.py  test_determinism.py  test_metrics.py  test_network.py  test_patterns.py  test_performance.py  test_queues.py  test_rl.py  test_signal_safety.py  test_turning.py  test_webster.py
tools/: build_web.py
web/: main.py
